# tui-tools

./: README.md  aliases.sh  continue.md  install.sh  todo.md
.github/workflows/: devtool.yml  harbor.yml  jot.yml  recall.yml  tdo.yml
devtool/: Cargo.toml  todo.md
devtool/src/: main.rs  textarea.rs
devtool/src/tools/: bcrypt_tool.rs  cron_expr.rs  diff.rs  hash.rs  hmac_gen.rs  html_entity.rs  json.rs  json_csv.rs  jwt.rs  jwt_sign.rs  list_tools.rs  mod.rs  number_base.rs  password.rs  pem_decoder.rs  regex.rs  string_stats.rs  text_transform.rs  timestamp.rs  token_counter.rs  uri_parser.rs  url.rs  uuid.rs  yaml_json.rs
docs/superpowers/plans/: 2026-05-28-devtool.md
docs/superpowers/specs/: 2026-05-28-devtool-design.md
harbor/: Cargo.toml
harbor/src/: main.rs
jot/: Cargo.toml
jot/src/: main.rs
recall/: Cargo.toml
recall/src/: main.rs
tdo/: Cargo.toml
tdo/src/: main.rs
